--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,2 +1,27 @@
- <h2 class="page-header">Dashboard</h2>
-<p>Welcome to your dashboard</p>  
+<div class="container-fluid posts">
+    <div class="new-post-form col-md-4">
+        <div class="post-header">
+            <p>Create new post !</p>
+        </div>
+        <div>
+            <textarea class="form-control" rows="3"></textarea>
+            <button type="button" class="btn btn-primary btn-mg active button">Publish</button>
+        </div>
+    </div>
+
+    <div class="separator"></div>
+
+    <div class="post col-md-4">
+        <div class="post-header">
+            <span class="col-md-8 post-owner">@Username</span>
+            <span class="pull-right col-md-4 time-counter">time counter</span>
+        </div>
+        <div class="form-control post-content">
+            tresc posta
+        </div>
+        <div class="button">
+            <button type="button" class="btn btn-primary btn-mg active button">Like</button>
+            <div class="rate">[Like's counter]</div>
+        </div>
+    </div>
+</div>
