--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LoginApp</title>
+	<title>microFacebook</title>
 	<link rel="stylesheet" href="/css/bootstrap.css" />
 	<link rel="stylesheet" href="/css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<div class="container">
+	<div class="fluid-container">
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
             {{#if user}}
+              <li role="presentation"><a href="">Community</a></li>
+              <li role="presentation"><a href="">Messages</a></li>
               <li role="presentation"><a href="/">Dashboard</a></li>
               <li role="presentation"><a href="/users/logout">Logout</a></li>
             {{else}}
@@ -19,7 +22,7 @@
             {{/if}}
           </ul>
         </nav>
-        <h3 class="text-muted">LoginApp</h3>
+        <h3 class="text-muted">microFacebook</h3>
       </div>
 
 
@@ -47,6 +50,6 @@
         <p>&copy; 2017 Szymon Zawodny</p>
       </footer>
 
-    </div> <!-- /container -->
+    </div>
 </body>
 </html>
