--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<div class="container-fluid posts">
+<div class="container-fluid box">
     <div class="new-post-form col-md-4">
         <div class="post-header">
             <p>Create new post !</p>
@@ -11,7 +11,7 @@
 
     <div class="separator"></div>
 
-    <div class="post col-md-4">
+    <div class="post box col-md-4">
         <div class="post-header">
             <span class="col-md-8 post-owner">@Username</span>
             <span class="pull-right col-md-4 time-counter">time counter</span>
