--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -12,8 +12,8 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             {{#if user}}
-              <li role="presentation"><a href="">Community</a></li>
-              <li role="presentation"><a href="">Messages</a></li>
+              <li role="presentation"><a href="/community">Community</a></li>
+              <li role="presentation"><a href="/messages">Messages</a></li>
               <li role="presentation"><a href="/">Dashboard</a></li>
               <li role="presentation"><a href="/users/logout">Logout</a></li>
             {{else}}
@@ -22,7 +22,7 @@
             {{/if}}
           </ul>
         </nav>
-        <h3 class="text-muted">microFacebook</h3>
+        <a href="/"><h3 class="text-muted">microFacebook</h3></a>
       </div>
 
 
